--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li>✅ Free Build Labor</li>
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free Virus Removal</li>
-          <li>✅ Free PC Repair</li>
+          <li>✅ Free PC Repairs</li>
         </ul>
       </div>
     </div>
@@ -314,6 +314,7 @@ yearSpan.textContent=new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
 
