--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     --orange-hover:#ff7a3f;
     --bg:#0f0f10;
     --card:#1f2937;
-    --muted:#9ca3af;
     --success:#16a34a;
     --danger:#b91c1c;
   }
@@ -24,7 +23,6 @@
 </head>
 <body class="min-h-screen">
 
-<!-- HEADER -->
 <header class="sticky top-0 z-30 bg-black/60 backdrop-blur border-b border-orange-700">
   <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
     <div class="flex items-center space-x-4">
@@ -41,257 +39,152 @@
   </div>
 </header>
 
-<!-- HERO -->
 <section class="py-16">
   <div class="max-w-6xl mx-auto px-4 grid md:grid-cols-2 gap-10 items-center">
     <div>
       <h1 class="text-4xl md:text-5xl font-extrabold text-orange-400 leading-tight">Professional Computer Repair <span class="text-white">— For the love of the game</span></h1>
       <p class="mt-4 text-gray-300 text-lg">30 years of hands-on experience repairing, optimizing, and building PCs. Free diagnostics and labor — you only pay for parts if needed. Book a free drop-off appointment below.</p>
-
-      <div class="mt-8 card p-6 rounded-xl shadow-lg border-l-4 border-orange-600">
-        <h2 class="text-2xl font-bold text-orange-300 mb-3">Services We Offer</h2>
-        <ul class="space-y-2 text-gray-100">
-          <li>✅ Free PC Diagnostics</li>
-          <li>✅ Free Repair Labor</li>
-          <li>✅ Free Remote Optimizations</li>
-          <li>✅ Free Computer Speed Up</li>
-          <li>✅ Free Build Labor</li>
-          <li>✅ You only pay for parts if needed</li>
-          <li>✅ Free virus removal</li>
-          <li>✅ Free PC repair</li>
-        </ul>
-      </div>
     </div>
 
     <div class="card p-6 rounded-xl shadow-lg">
       <h3 class="text-xl font-bold text-orange-300 mb-4">Quick info</h3>
       <p class="text-gray-300">Drop-off appointment windows are one hour. Times shown as local. We try to respond quickly — thank you for trusting TheHardwareHotline.</p>
-      <div class="mt-4 text-sm text-gray-400">
-        <span class="dot" style="background:var(--orange)"></span> <strong class="text-orange-300">Optional donations</strong> are welcome but never required.
-      </div>
     </div>
   </div>
 </section>
 
-<!-- BOOKING / APPOINTMENTS -->
 <main class="max-w-5xl mx-auto px-4 pb-20">
 
-  <!-- BOOKING CARD -->
-  <section id="bookingCard" class="card p-6 rounded-2xl shadow-xl">
-    <h2 class="text-2xl font-extrabold text-orange-300 mb-3">Schedule a Drop-Off Appointment</h2>
-    <form id="bookingForm" class="space-y-4">
+<section id="bookingCard" class="card p-6 rounded-2xl shadow-xl">
+  <h2 class="text-2xl font-extrabold text-orange-300 mb-3">Schedule a Drop-Off Appointment</h2>
+  <form id="bookingForm" class="space-y-4">
+    <div>
+      <label class="block text-sm text-gray-300 mb-1" for="name">Your Name</label>
+      <input id="name" name="name" required type="text" placeholder="e.g., John" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500" />
+    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div>
-        <label class="block text-sm text-gray-300 mb-1" for="name">Your Name</label>
-        <input id="name" name="name" required type="text" placeholder="e.g., John" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500" />
+        <label class="block text-sm text-gray-300 mb-1" for="date">Preferred Date</label>
+        <input id="date" name="date" required type="date" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500" />
       </div>
-
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <div>
-          <label class="block text-sm text-gray-300 mb-1" for="date">Preferred Date</label>
-          <input id="date" name="date" required type="date" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500" />
-        </div>
-
-        <div>
-          <label class="block text-sm text-gray-300 mb-1" for="time">Preferred Time</label>
-          <select id="time" name="time" required class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500"></select>
-        </div>
-      </div>
-
       <div>
-        <label class="block text-sm text-gray-300 mb-1" for="description">Brief Description</label>
-        <textarea id="description" name="description" rows="3" required placeholder="e.g., 'PC won't boot' or 'Very slow after update'" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500"></textarea>
-      </div>
-
-      <div class="flex flex-col sm:flex-row gap-3">
-        <button id="submitBtn" type="submit" class="btn-orange px-5 py-3 rounded-lg font-semibold shadow">Save Appointment Request</button>
-      </div>
-      <p id="formFeedback" class="mt-3 text-center text-sm"></p>
-    </form>
-  </section>
-
-  <!-- COMPACT APPOINTMENTS (quick view) -->
-  <section class="mt-6">
-    <div class="card p-4 rounded-xl shadow-inner">
-      <h3 class="text-lg font-bold text-orange-300 mb-3">Upcoming Appointments (quick view)</h3>
-      <div id="compactAppointments" class="max-h-48 overflow-y-auto divide-y divide-gray-700 p-1">
-        <p class="text-gray-400">Loading appointments…</p>
+        <label class="block text-sm text-gray-300 mb-1" for="time">Preferred Time</label>
+        <select id="time" name="time" required class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500">
+          <option value="">Select a date first</option>
+        </select>
       </div>
     </div>
-  </section>
-
-  <!-- ADMIN EXPANDED APPOINTMENTS -->
-  <section id="expandedAppointments" class="card p-4 rounded-xl shadow-xl mt-6 hidden">
-    <div class="flex justify-between items-start">
-      <h3 class="text-xl font-bold text-orange-300">All Appointments (Detailed)</h3>
-      <div>
-        <button class="px-3 py-2 rounded border border-gray-700 text-gray-200" onclick="closeExpanded()">Close</button>
-      </div>
+    <div>
+      <label class="block text-sm text-gray-300 mb-1" for="description">Brief Description</label>
+      <textarea id="description" name="description" rows="3" required placeholder="e.g., 'PC won't boot'" class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:border-orange-500"></textarea>
     </div>
-    <div id="appointmentsBox" class="mt-4 max-h-96 overflow-y-auto divide-y divide-gray-700 p-2"></div>
-  </section>
+    <div class="flex flex-col sm:flex-row gap-3">
+      <button id="submitBtn" class="btn-orange px-5 py-3 rounded-lg font-semibold shadow">Save Appointment Request</button>
+    </div>
+    <p id="formFeedback" class="mt-3 text-center text-sm"></p>
+  </form>
+</section>
 
-</main>
+<section class="mt-6">
+  <div class="card p-4 rounded-xl shadow-inner">
+    <h3 class="text-lg font-bold text-orange-300 mb-3">Upcoming Appointments</h3>
+    <div id="compactAppointments" class="max-h-48 overflow-y-auto divide-y divide-gray-700 p-1">
+      <p class="text-gray-400">Loading appointments…</p>
+    </div>
+  </div>
+</section>
 
-<!-- FOOTER -->
+<!-- THANK YOU MODAL -->
+<div id="thankModal" class="fixed inset-0 flex items-center justify-center bg-black/60 hidden z-50">
+  <div class="bg-card p-6 rounded-xl max-w-md w-full text-center">
+    <h4 class="text-2xl font-bold text-orange-300 mb-3">Thanks — Appointment Booked!</h4>
+    <button class="btn-orange px-4 py-2 rounded" onclick="closeThankModal()">Close</button>
+  </div>
+</div>
+
 <footer class="mt-12 py-8 border-t border-gray-800 text-center text-sm text-gray-400">
   &copy; <span id="year"></span> TheHardwareHotline.com
 </footer>
 
-<!-- SCRIPT -->
 <script>
-const DAILY_SLOTS = [
-  "09:00 AM - 10:00 AM","10:00 AM - 11:00 AM","11:00 AM - 12:00 PM",
-  "12:00 PM - 01:00 PM","01:00 PM - 02:00 PM","02:00 PM - 03:00 PM",
-  "03:00 PM - 04:00 PM","04:00 PM - 05:00 PM"
-];
+const SHEET_API = "https://script.google.com/macros/s/AKfycbwz1iUFnyUersgFiuMGCUnCP0STeMsEzI34QHJbQZFARU4IIXRWs6Bqn-FCsCzPmjkPJA/exec";
+const DAILY_SLOTS = ["09:00 AM - 10:00 AM","10:00 AM - 11:00 AM","11:00 AM - 12:00 PM","12:00 PM - 01:00 PM","01:00 PM - 02:00 PM","02:00 PM - 03:00 PM","03:00 PM - 04:00 PM","04:00 PM - 05:00 PM"];
+let appointments = [];
 
-const dateInput=document.getElementById('date');
-const timeSelect=document.getElementById('time');
-const bookingForm=document.getElementById('bookingForm');
-const formFeedback=document.getElementById('formFeedback');
-const compactAppointments=document.getElementById('compactAppointments');
-const appointmentsBox=document.getElementById('appointmentsBox');
-const expandedAppointments=document.getElementById('expandedAppointments');
-const yearSpan=document.getElementById('year');
-yearSpan.textContent=new Date().getFullYear();
+const dateInput = document.getElementById('date');
+const timeSelect = document.getElementById('time');
+const bookingForm = document.getElementById('bookingForm');
+const formFeedback = document.getElementById('formFeedback');
+const compactAppointments = document.getElementById('compactAppointments');
+const thankModal = document.getElementById('thankModal');
+const yearSpan = document.getElementById('year');
 
-let appointments=[];
+yearSpan.textContent = new Date().getFullYear();
+dateInput.min = new Date(new Date().setDate(new Date().getDate()+1)).toISOString().split('T')[0];
 
-function setMinDateTomorrow(){
-  const t=new Date();
-  t.setDate(t.getDate()+1);
-  const yyyy=t.getFullYear();
-  const mm=String(t.getMonth()+1).padStart(2,'0');
-  const dd=String(t.getDate()).padStart(2,'0');
-  dateInput.min=`${yyyy}-${mm}-${dd}`;
-}
-setMinDateTomorrow();
+function prettyDate(d){ const dt = new Date(d); return isNaN(dt)? d : dt.toLocaleDateString(); }
 
-/* ========== Load Appointments ========== */
-function loadAppointments(){
-  google.script.run.withSuccessHandler((data)=>{
-    appointments=data;
+async function fetchAppointments(){
+  try{
+    const res = await fetch(SHEET_API);
+    appointments = await res.json();
     renderCompactAppointments();
-    renderExpandedAppointments();
     updateTimeSlots();
-  }).withFailureHandler(err=>{
-    compactAppointments.innerHTML='<p class="text-red-500">Could not load appointments.</p>';
+  }catch(err){
     console.error(err);
-  }).getAppointments();
+    compactAppointments.innerHTML = '<p class="text-red-500">Could not load appointments.</p>';
+  }
 }
 
-/* Render compact view */
 function renderCompactAppointments(){
-  if(!appointments||appointments.length===0){
-    compactAppointments.innerHTML='<p class="text-gray-400">No appointments yet — be the first!</p>';
-    return;
-  }
-  appointments.sort((a,b)=>a.date===b.date?a.time.localeCompare(b.time):a.date.localeCompare(b.date));
+  if(!appointments.length){ compactAppointments.innerHTML='<p class="text-gray-400">No appointments yet — be the first!</p>'; return; }
+  const sorted = appointments.slice().sort((a,b)=> a.date===b.date ? a.time.localeCompare(b.time) : a.date.localeCompare(b.date));
   compactAppointments.innerHTML='';
-  appointments.forEach(a=>{
-    const el=document.createElement('div');
+  sorted.forEach(a=>{
+    const el = document.createElement('div');
     el.className='py-2';
-    el.innerHTML=`<div class="text-sm font-semibold text-orange-300">${a.name}</div>
-      <div class="text-xs text-gray-300">${a.date} • ${a.time}</div>
-      <div class="text-gray-300 mt-1 text-sm">${a.description}</div>`;
+    el.innerHTML=`<div><div class="text-sm font-semibold text-orange-300">${a.name||'Client'}</div><div class="text-xs text-gray-300">${prettyDate(a.date)} • ${a.time}</div><div class="text-gray-300 mt-1 text-sm">${a.description||''}</div></div>`;
     compactAppointments.appendChild(el);
   });
 }
 
-/* Render expanded admin view */
-function renderExpandedAppointments(){
-  if(!appointmentsBox) return;
-  appointmentsBox.innerHTML='';
-  if(!appointments||appointments.length===0){
-    appointmentsBox.innerHTML='<p class="text-gray-400">No appointments yet.</p>';
-    return;
-  }
-  const grouped=appointments.reduce((acc,ap)=>{(acc[ap.date]=acc[ap.date]||[]).push(ap);return acc;},{});
-  const dates=Object.keys(grouped).sort();
-  dates.forEach(date=>{
-    const header=document.createElement('div');
-    header.className='py-3';
-    header.innerHTML=`<div class="text-sm font-bold text-orange-300 mb-2">${date}</div>`;
-    appointmentsBox.appendChild(header);
-    grouped[date].forEach(ap=>{
-      const card=document.createElement('div');
-      card.className='p-3 rounded mb-2 bg-black/20';
-      card.innerHTML=`<div class="flex justify-between">
-        <div>
-          <div class="text-sm font-semibold text-white">${ap.name}</div>
-          <div class="text-xs text-gray-300">${ap.time}</div>
-          <div class="text-gray-300 mt-2">${ap.description}</div>
-        </div>
-        <div class="text-xs text-gray-400">${date}</div>
-      </div>`;
-      appointmentsBox.appendChild(card);
-    });
-  });
-}
-
-/* Update available time slots */
 function updateTimeSlots(){
-  const selectedDate=dateInput.value;
+  const selectedDate = dateInput.value;
   timeSelect.innerHTML='<option value="">Select a time</option>';
   if(!selectedDate) return;
-  const booked=appointments.filter(a=>a.date===selectedDate).map(a=>a.time);
+  const booked = appointments.filter(a=>a.date===selectedDate).map(a=>a.time);
   DAILY_SLOTS.forEach(slot=>{
     const opt=document.createElement('option');
     opt.value=slot;
-    if(booked.includes(slot)){
-      opt.textContent=slot+' (BOOKED)';
-      opt.disabled=true;
-    } else {
-      opt.textContent=slot+' (Available)';
-    }
+    opt.textContent = booked.includes(slot) ? `${slot} (BOOKED)` : `${slot} (Available)`;
+    opt.disabled = booked.includes(slot);
     timeSelect.appendChild(opt);
   });
 }
 
-/* Submit appointment */
-bookingForm.addEventListener('submit',ev=>{
-  ev.preventDefault();
+bookingForm.addEventListener('submit', async e=>{
+  e.preventDefault();
   formFeedback.textContent='';
   const name=document.getElementById('name').value.trim();
   const date=dateInput.value;
   const time=timeSelect.value;
   const description=document.getElementById('description').value.trim();
-
-  if(!name||!date||!time||!description){
-    formFeedback.textContent='Please fill out all fields.';
-    formFeedback.style.color='tomato';
-    return;
-  }
-
-  google.script.run.withSuccessHandler(()=>{
-    formFeedback.textContent='Appointment booked! Thank you.';
-    formFeedback.style.color='lightgreen';
-    bookingForm.reset();
-    loadAppointments();
-    setTimeout(()=>alert("Thanks — Appointment Booked!"),300);
-  }).withFailureHandler(err=>{
-    formFeedback.textContent='Could not book appointment.';
-    formFeedback.style.color='tomato';
-    console.error(err);
-  }).addAppointment(name,date,time,description);
+  if(!name||!date||!time||!description){ formFeedback.textContent="Please fill out all fields."; formFeedback.style.color="tomato"; return;}
+  if(appointments.some(a=>a.date===date&&a.time===time)){ formFeedback.textContent="Sorry — that slot was just booked."; formFeedback.style.color="tomato"; updateTimeSlots(); return;}
+  try{
+    const res=await fetch(SHEET_API,{method:'POST',headers:{"Content-Type":"application/json"},body:JSON.stringify({name,date,time,description})});
+    const json=await res.json();
+    if(json.status==='success'){ formFeedback.textContent="Appointment booked!"; formFeedback.style.color="lightgreen"; bookingForm.reset(); setTimeout(()=>thankModal.classList.remove('hidden'),300); await fetchAppointments(); }
+    else{ formFeedback.textContent="Error saving appointment."; formFeedback.style.color="tomato"; console.error(json); }
+  }catch(err){ console.error(err); formFeedback.textContent="Network error — could not book appointment."; formFeedback.style.color="tomato"; }
 });
 
-/* Admin key prompt */
-const ADMIN_KEY="42069";
-function promptAdminKey(){
-  const key=prompt("Enter admin key to view detailed appointments (ask owner).");
-  if(key===ADMIN_KEY){
-    expandedAppointments.classList.remove('hidden');
-    expandedAppointments.scrollIntoView({behavior:'smooth'});
-  } else if(key!==null) alert("Invalid key.");
-}
-function closeExpanded(){expandedAppointments.classList.add('hidden');}
+function closeThankModal(){ thankModal.classList.add('hidden'); }
+function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoView({behavior:'smooth'}); }
 
-/* Scroll helper */
-function scrollToBooking(){document.getElementById('bookingCard').scrollIntoView({behavior:'smooth'});}
-
-dateInput.addEventListener('change',updateTimeSlots);
-loadAppointments();
+fetchAppointments();
 </script>
 </body>
 </html>
+
+
