--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li>✅ Free Build Labor</li>
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free virus removal</li>
-          <li>✅ Free PC repairs</li>
+          <li>✅ Free PC repairssssss</li>
         </ul>
       </div>
     </div>
@@ -362,3 +362,4 @@ function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoVie
 
 </body>
 </html>
+
