--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@ body {
 
 <script>
 /* CONFIG */
-const SHEET_API = "https://script.google.com/macros/s/AKfycbwz1iUFnyUersgFiuMGCUnCP0STeMsEzI34QHJbQZFARU4IIXRWs6Bqn-FCsCzPmjkPJA/exec";
+const SHEET_API = 'https://hardwarehotline-proxy.vercel.app/api/proxy';
+  
 const ADMIN_KEY = "42069";
 const DAILY_SLOTS = [
   "09:00 AM - 10:00 AM","10:00 AM - 11:00 AM","11:00 AM - 12:00 PM",
@@ -329,3 +330,4 @@ fetchAppointments();
 </script>
 </body>
 </html>
+
